added update and improved view

--- a/_data/cv/education.yml
+++ b/_data/cv/education.yml
@@ -1,4 +1,4 @@
-- title: 'BTech - Mechanical Engineering'
+- title: 'B. Tech - Mechanical Engineering'
   description: 'National Institute of Technology Silchar (2010-2014)'
 
 - title: 'Ph.D. - Methods for Verification of Weakly Compressible SPH Schemes'
