--- a/_data/cv/experience.yml
+++ b/_data/cv/experience.yml
@@ -1,3 +1,7 @@
+- title: 'Teaching Assistant'
+  description: 'Courses: Aerodynamics lab, Incompressible fluid dynamics, Data
+  interpretation and analysis'
+
 - title: 'Associate software developer'
   description: 'Siemens PLM (2016-2017)'
 
