--- a/_data/cv/experience.yml
+++ b/_data/cv/experience.yml
@@ -1,5 +1,5 @@
 - title: 'Teaching assistant'
-  description: 'Courses: Aerodynamics lab, Incompressible fluid dynamics, Data
+  description: 'IIT Bombay (2017-Present) - Aerodynamics lab, Incompressible fluid dynamics, Data
   interpretation and analysis'
 
 - title: 'Associate software developer'
