--- a/_data/update.yml
+++ b/_data/update.yml
@@ -1,4 +1,5 @@
-update: 
+update:
 
 - {pre: 'Completed 6 weeks course on Deep Learning by', url_text: 'NSM and
-CDAC', url: 'https://www.iitgoa.ac.in/aishikshadl/index.php', post: ''} 
+CDAC', url: 'https://www.iitgoa.ac.in/aishikshadl/index.php', post: ''}
+- {pre: 'Writing my', url_text: 'thesis', url: '', post: ''}
