--- a/_data/cv/education.yml
+++ b/_data/cv/education.yml
@@ -1,5 +1,6 @@
 - title: 'B. Tech - Mechanical Engineering'
   description: 'National Institute of Technology Silchar (2010-2014)'
 
-- title: 'Ph.D. - Methods for Verification of Weakly Compressible SPH Schemes'
+- title: 'Ph.D. - Development of Second-Order Convergent
+Weakly-Compressible Smoothed Particle Hydrodynamics Schemes'
   description: 'Indian Institute of Technology Bombay (2017-present)'
