--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -2,33 +2,33 @@ featured:
 
 - {name: 'Pawan Negi and Prabhu Ramachandran, "Verification of boundary
 conditions for smoothed particle hydrodynamics", Physics of Fluids, 2022.', url:
-'https://doi.org/10.1063/5.0126234'}
+'https://doi.org/10.1063/5.0126234', download: 'assets/POF22-AR-05555.pdf'}
 
 - {name: 'Pawan Negi and Prabhu Ramachandran, "Techniques for second order
 convergent weakly-compressible smoothed particle hydrodynamics schemes
 without boundaries", Physics of Fluids, Vol.34, Issue 8, 087125, 2022.', url:
-'https://doi.org/10.1063/5.009835'}
+'https://doi.org/10.1063/5.009835', download: 'assets/POF22-AR-02537.pdf'}
 
 - {name: 'Pawan Negi and Prabhu Ramachandran, "How to train your solver: A
 method of manufactured solutions for weakly-compressible SPH", Physics of
 Fluids, Vol.33, Issue 12, 2021.', url:
-'https://doi.org/10.1063/5.0072383'}
+'https://doi.org/10.1063/5.0072383', download: 'assets/POF21-AR-04479.pdf'}
 
 index:
 
 - {name: 'Pawan Negi and Prabhu Ramachandran, "Verification of boundary
 conditions for smoothed particle hydrodynamics", Physics of Fluids, 2022.',
-url: 'https://doi.org/10.1063/5.0126234'}
+url: 'https://doi.org/10.1063/5.0126234', download: '/assets/POF22-AR-05555.pdf'}
 
 - {name: 'Pawan Negi and Prabhu Ramachandran, "Techniques for second order
 convergent weakly-compressible smoothed particle hydrodynamics schemes
 without boundaries", Physics of Fluids, Vol.34, Issue 8, 087125, 2022.', url:
-'https://doi.org/10.1063/5.009835'}
+'https://doi.org/10.1063/5.009835', download: '/assets/POF22-AR-02537.pdf'}
 
 - {name: 'Pawan Negi and Prabhu Ramachandran, "How to train your solver: A
 method of manufactured solutions for weakly-compressible SPH", Physics of
 Fluids, Vol.33, Issue 12, 2021.', url:
-'https://doi.org/10.1063/5.0072383'}
+'https://doi.org/10.1063/5.0072383', download: '/assets/POF21-AR-04479.pdf'}
 
 - {name: 'Prabhu Ramachandran, Aditya Bhosale, Kunal Puri, Pawan Negi, Abhinav
 Muta, A Dinesh, Dileep Menon, Rahul Govind, Suraj Sanka, Amal S Sebastian,
@@ -37,19 +37,19 @@ Deep Tavker, Pankaj Pandey, Chandrashekhar Kaushik, Arkopal Dutt, Arpit Agarwal,
 "PySPH: a Python-based framework for smoothed particle hydrodynamics", ACM
 Transactions on Mathematical Software, volume 47, number 4, article 34, July
 2021.', url:
-'https://doi.org/10.1145/3460773'}
+'https://doi.org/10.1145/3460773', download: '/assets/1909.04504.pdf'}
 
 - {name: 'Pawan Negi, and Prabhu Ramachandran. “Algorithms for Uniform Particle
 Initialization in Domains with Complex Boundaries.” Computer Physics
 Communications 265 (August 1, 2021): 108008.', url:
-'https://doi.org/10.1016/j.cpc.2021.108008'}
+'https://doi.org/10.1016/j.cpc.2021.108008', download: '/assets/1910.07898.pdf'}
 
 - {name: 'Abhinav Muta, Prabhu Ramachandran, and Pawan Negi. “An Efficient, Open
 Source, Iterative ISPH Scheme.” Computer Physics Communications 255 (October
 1, 2020): 107283.', url:
-'https://doi.org/10.1016/j.cpc.2020.107283'}
+'https://doi.org/10.1016/j.cpc.2020.107283', download: '/assets/1908.01762.pdf'}
 
 - {name: 'Pawan Negi, Prabhu Ramachandran, and Asmelash Haftu. “An Improved
 Non-Reflecting Outlet Boundary Condition for Weakly-Compressible SPH.” Computer
 Methods in Applied Mechanics and Engineering 367 (August 1, 2020): 113119.', url:
-'https://doi.org/10.1016/j.cma.2020.113119'}
+'https://doi.org/10.1016/j.cma.2020.113119', download: '/assets/1907.04034.pdf'}
