--- a/_data/cv/education.yml
+++ b/_data/cv/education.yml
@@ -1,6 +1,6 @@
-- title: 'B. Tech - Mechanical Engineering'
-  description: 'National Institute of Technology Silchar (2010-2014)'
-
 - title: 'Ph.D. - Development of Second-Order Convergent
 Weakly-Compressible Smoothed Particle Hydrodynamics Schemes'
-  description: 'Indian Institute of Technology Bombay (2017-present)'
+  description: 'Indian Institute of Technology Bombay (2017-2023)'
+
+- title: 'B. Tech - Mechanical Engineering'
+  description: 'National Institute of Technology Silchar (2010-2014)'
