--- a/_data/cv/experience.yml
+++ b/_data/cv/experience.yml
@@ -1,14 +1,17 @@
-- title: 'Teaching assistant'
-  description: 'IIT Bombay (2017-Present) - Aerodynamics lab, Incompressible fluid dynamics, Data
+- title: 'Senior Research Associate'
+  description: 'Illinois Institute of Technology (2023-Present)'
+
+- title: 'Teaching Assistant'
+  description: 'IIT Bombay (2017-2023) - Aerodynamics lab, Incompressible fluid dynamics, Data
   interpretation and analysis'
 
-- title: 'Associate software developer'
+- title: 'Associate Software Developer'
   description: 'Siemens PLM (2016-2017) - Manual mesh abstraction'
 
-- title: 'Senior CAE engineer'
+- title: 'Senior CAE Engineer'
   description: 'Zeus Numerix Pvt. Ltd (2015-2016) - Software development,
   mathematical modelling'
 
-- title: 'CAE engineer'
+- title: 'CAE Engineer'
   description: 'Zeus Numerix Pvt. Ltd (2014-2015) - Software development,
   mathematical modelling'
