--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 baseurl: "" # the subpath of your site, e.g. /blog
 title: "Pawan Negi" # the name of your site, e.g. ACME Corp.
-description: "Research Scholar"
+description: "Senior Research Associate"
 # Enter your Disqus shortname (not your username) to enable commenting on posts
 # You can find your shortname on the Settings page of your Disqus account
 disqus: pawansnegi
