--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -10,8 +10,7 @@ social:
 - {icon: 'linkedin', link: 'https://www.linkedin.com/in/pawan-negi-49bba546'}
 
 contacts:
-- {name: 'Pawan Negi', title: 'Research Scholar', department: 'Aerospace
-Engineering', institution: 'Indian Institute of Technology Bombay',
-institution_address: 'JVLR Road,
-Powai, Mumbai', phone: '--', email: 'Pawan2713@gmail.com', office:
-'CFD Lab, Aero-annex', image: 'assets/img/contact.jpg'}
+- {name: 'Pawan Negi', title: 'Senior Research Associate', department:
+'Applied Mathematics', institution: 'Illinois Institute of Technology',
+institution_address: '10 W 32 St, Chicago, 60616', phone: '--', email: 'Pawan2713@gmail.com', office:
+'RE213', image: 'assets/img/contact.jpg'}
