--- a/_data/update.yml
+++ b/_data/update.yml
@@ -1,5 +1,7 @@
 update:
 
+- {pre: 'Teaching Calculus (MATH 151) at Illinois Tech - Aug 21, 2023', url_text: , url:
+'', post: ''}
 - {pre: 'Defended my PhD thesis on May 17, 2023', url_text: , url:
 '', post: ''}
 - {pre: 'Joined Illinois Tech on March 1, 2023', url_text: ' ', url: ' ',
