added more info

--- a/_data/cv/experience.yml
+++ b/_data/cv/experience.yml
@@ -1,5 +1,7 @@
 - title: 'Senior Research Associate'
-  description: 'Illinois Institute of Technology (2023-Present)'
+  description: 'Illinois Institute of Technology (2023-Present) -
+  Calculus I (MATH151) - Fall 2023, Introduction to differential equations (MATH252) -
+  Spring 2024'
 
 - title: 'Teaching Assistant'
   description: 'IIT Bombay (2017-2023) - Aerodynamics lab, Incompressible fluid dynamics, Data
