--- a/_data/update.yml
+++ b/_data/update.yml
@@ -1,6 +1,9 @@
 update:
 
-- {pre: 'Teaching Calculus (MATH 151) at Illinois Tech - Aug 21, 2023', url_text: , url:
+- {pre: 'Teaching Introduction to differential equations (MATH 252) at
+Illinois Tech - Spring 2024', url_text: , url:
+'', post: ''}
+- {pre: 'Teaching Calculus (MATH 151) at Illinois Tech - Fall 2023', url_text: , url:
 '', post: ''}
 - {pre: 'Defended my PhD thesis on May 17, 2023', url_text: , url:
 '', post: ''}
