--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -2,8 +2,9 @@ featured:
 
 - {name: 'Pawan Negi, Maggie Cheng, Mahesh Krishnamurthy, Wenjun Ying, and
 Shuwang Li, "Learning Domain-Independent Green’s Function For Elliptic
-Partial Differential Equations", Under Review',
-url: '', download: ''}
+Partial Differential Equations", Computer
+Methods in Applied Mechanics and Engineering 421, 1 March 2024, 116779.',
+url: 'https://doi.org/10.1016/j.cma.2024.116779', download: 'assets/bing.pdf'}
 
 - {name: 'Pawan Negi and Prabhu Ramachandran, "Verification of boundary
 conditions for smoothed particle hydrodynamics", Physics of Fluids, 2022.', url:
@@ -18,8 +19,9 @@ index:
 
 - {name: 'Pawan Negi, Maggie Cheng, Mahesh Krishnamurthy, Wenjun Ying, and
 Shuwang Li, "Learning Domain-Independent Green’s Function For Elliptic
-Partial Differential Equations", Under Review',
-url: '', download: ''}
+Partial Differential Equations", Computer
+Methods in Applied Mechanics and Engineering 421, 1 March 2024, 116779.',
+url: 'https://doi.org/10.1016/j.cma.2024.116779', download: 'assets/bing.pdf'}
 
 - {name: 'Pawan Negi and Prabhu Ramachandran, "Verification of boundary
 conditions for smoothed particle hydrodynamics", Physics of Fluids, 2022.',
@@ -66,3 +68,9 @@ conferences:
 - {name: '8th Annual Meeting of SIAM Central States Section, "Learning Free
 Space Green’s Function For Elliptic Partial Differential Equations",
 October 7-8, 2023 | Lincoln, Nebraska'}
+- {name: 'Stochastic and Multiscale Modeling and Computation Seminar,
+"Weakly Compressible Smoothed Particle Hydrodynamics Method", November 9,
+2023 | Illinois Tech, Chicago, Illinois'}
+- {name: 'Particle Methods and Applications Conference, "An accurate
+simulation of the flow of red blood cells using SPH", Junuary 22-24, 2024 |
+Santa Fe, New Mexico'}
