--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -21,7 +21,7 @@ index:
 Shuwang Li, "Learning Domain-Independent Green’s Function For Elliptic
 Partial Differential Equations", Computer
 Methods in Applied Mechanics and Engineering 421, 1 March 2024, 116779.',
-url: 'https://doi.org/10.1016/j.cma.2024.116779', download: 'assets/bing.pdf'}
+url: 'https://doi.org/10.1016/j.cma.2024.116779', download: '/assets/bing.pdf'}
 
 - {name: 'Pawan Negi and Prabhu Ramachandran, "Verification of boundary
 conditions for smoothed particle hydrodynamics", Physics of Fluids, 2022.',
